# extutils-rs

./: Cargo.toml
src/: fileop.rs  hmacop.rs  lib.rs  logtrans.rs  netop.rs  panicop.rs  procop.rs  randop.rs  strop.rs  timeop.rs
test/cases/: Cargo.toml
test/cases/src/: filehdl.rs  main.rs  nettst.rs  panictest.rs  proctst.rs  strhdl.rs  timehdl.rs
