[package]
name = "extutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.0"
extlog = "^0.1.8"
extargsparse_worker = "^0.2.2"
#extargsparse_worker = {path = "../extargsparse-rs/extargsparse_worker"}
extargsparse_codegen = "^0.1.4"
lazy_static = "^1.4.0"
regex = "1"
num-traits = "^0.2.5"
num-bigint = "^0.4.3"
base64 = "^0.13.0"
backtrace = "^0.3.73"