[package]
name = "extutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.0"
extlog = "^0.1.8"
extargsparse_worker = "^0.2.2"
#extargsparse_worker = {path = "../extargsparse-rs/extargsparse_worker"}
extargsparse_codegen = "^0.1.4"
lazy_static = "^1.4.0"
regex = "1"
num-traits = "^0.2.5"
num-bigint = "^0.4.3"
base64 = "^0.13.0"
backtrace = "^0.3.73"
rand = "^0.8.5"
hmac = "^0.12.1"
sha1 = "^0.10.6"
reqwest = {version = "^0.12.5", features = ["blocking","rustls-tls"]}
sysinfo = "^0.31.2"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["sysinfoapi", "synchapi","winsock2","ioapiset","minwinbase","errhandlingapi","handleapi","ws2def","ws2tcpip","mswsock"]
