[package]
name = "cases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#extargsparse_worker = "^0.2.0"
extargsparse_worker = {path = "../../../extargsparse-rs/extargsparse_worker"}
extargsparse_codegen = "^0.1.4"
lazy_static = "^1.4.0"
regex = "1"
extlog = "^0.1.8"
extutils = {path = "../.."}